# MDreader

./: .gitignore  AGENT.md  CLAUDE.md  README.md
.github/workflows/: release.yml  windows-ci.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
docs/plans/: 2026-06-25-macos-support-design.md  2026-06-25-outline-design.md  2026-06-27-linux-port-design.md  2026-07-01-windows-support-design.md
gradle/: libs.versions.toml
linux/: .gitignore  Cargo.toml  build.rs
linux/data/: com.mdreader.MDreader.desktop  com.mdreader.MDreader.metainfo.xml
linux/scripts/: install.sh
linux/src/: app.rs  build_info.rs  config.rs  context.rs  lib.rs  main.rs  shared_spec_tests.rs
linux/src/bin_gui/: mdreader.rs  tui.rs
linux/src/render/: fence.rs  mermaid_fence.rs  mod.rs  outline.rs  preprocess.rs  svg_guard.rs  webview.rs
linux/src/store/: cache.rs  content_hash.rs  doc_info.rs  doc_store.rs  mod.rs  session_store.rs  settings_store.rs  theme_store.rs  zoom_store.rs
linux/src/tui/: app.rs  mod.rs  renderer.rs
linux/src/util/: date_buckets.rs  markdown_ext.rs  mod.rs  theme.rs  titles.rs  zoom.rs
macos/: project.yml
macos/MDreader/: AboutView.swift  AppEnvironment.swift  BuildInfo.swift  ContentView.swift  LibraryView.swift  MDreaderApp.swift  OutlineView.swift  ReaderModel.swift  SettingsView.swift  SidebarView.swift  WindowTabber.swift
macos/MDreader/data/: CachedDoc.swift  (+8 more)
macos/Tests/: ContentHashTests.swift  DateBucketsTest.swift  DocRepositoryTests.swift  MermaidFenceNormalizerTests.swift  OutlineItemTest.swift  ReaderModelTests.swift  SessionStoreTest.swift  SettingsStoreTest.swift  SharedSpecTests.swift  SourceFileWatcherTests.swift  SvgGuardTests.swift  ThemeStoreTest.swift  TitlesTest.swift  ZoomStoreTest.swift
macos/scripts/: build.sh
shared/render/: render.css  render.js
shared/specs/: content_hash.json  mermaid_fence.json  titles.json
tools/: gen_icon.py
windows/: .gitignore  MDreader.sln
windows/MDreader/: App.xaml  App.xaml.cs  LibraryModel.cs  MDreader.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
windows/MDreader.Tests/: CacheTests.cs  ContentHashTests.cs  DateBucketsTests.cs  FenceTests.cs  MDreader.Tests.csproj  MermaidFenceTests.cs  OutlineTests.cs  PreprocessTests.cs  SessionStoreTests.cs  SettingsStoreTests.cs  SvgGuardTests.cs  TitlesTests.cs  ZoomStoreTests.cs
windows/scripts/: build.ps1  install.ps1
(+74 files in other folders)
