[package]
name = "mdreader"
version = "0.1.0"
edition = "2021"
description = "MDreader — native Linux Markdown reader (GTK4 + WebKitGTK)"
license = "MIT"
authors = ["Liang Li"]

[[bin]]
name = "mdreader"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.6", package = "gtk4" }
webkit6 = "0.1"
glib = "0.17"
gio = "0.17"
sha2 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[build-dependencies]
glib-build-tools = "0.17"

[profile.release]
opt-level = 2
