[package]
name = "mdreader"
version = "0.1.0"
edition = "2021"
description = "MDreader — native Linux Markdown reader (GTK4 + WebKitGTK, or TUI)"
license = "MIT"
authors = ["Liang Li"]

[lib]
name = "mdreader_core"
path = "src/lib.rs"

[[bin]]
name = "mdreader"
path = "src/bin_gui/mdreader.rs"
required-features = ["gui"]

[[bin]]
name = "mdreader-tui"
path = "src/bin_gui/tui.rs"

[features]
default = ["gui"]
gui = ["dep:gtk", "dep:webkit6", "dep:glib", "dep:gio", "dep:glib-build-tools"]

[dependencies]
# GUI (feature-gated; TUI builds without GTK)
gtk = { version = "0.6", package = "gtk4", optional = true }
webkit6 = { version = "0.1", optional = true }
glib = { version = "0.17", optional = true }
gio = { version = "0.17", optional = true }
# Shared pure logic
sha2 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# TUI
ratatui = "0.28"
crossterm = "0.28"
pulldown-cmark = "0.12"

[build-dependencies]
glib-build-tools = { version = "0.17", optional = true }

[profile.release]
opt-level = 2
